Additional styling updates

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	      		<a class="navbar-brand" href="#">James Hafer</a>
 	    	</div>
 	    	<ul class="nav navbar-nav navbar-right">
-	      		<li class="active"><a href="#">About Me</a></li>
-	      		<li><a href="./portfolio.html">Portfolio</a></li>
-	      		<li><a href="./contact.html">Contact</a></li>
+	      		<li class="active liNav"><a href="#" class="navLink">About Me</a></li>
+	      		<li class="liNav"><a href="./portfolio.html" class="navLink">Portfolio</a></li>
+	      		<li class="liNav"><a href="./contact.html" class="navLink">Contact</a></li>
 	    	</ul>
 	  	</div>
 	</nav>
