--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About James Hafer</title>
+	<title>James Hafer's Portfolio</title>
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
 	 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 
@@ -24,9 +24,9 @@
 	      		<a class="navbar-brand text-center" href="./index.html">James Hafer</a>
 	    	</div>
 	    	<ul class="nav navbar-nav navbar-right">
-	      		<li><a href="./index.html">About Me</a></li>
-	      		<li class="active"><a href="#">Portfolio</a></li>
-	      		<li><a href="./contact.html">Contact</a></li>
+	      		<li class="liNav"><a href="./index.html" class="navLink">About Me</a></li>
+	      		<li class="active liNav"><a href="#" class="navLink">Portfolio</a></li>
+	      		<li class="liNav"><a href="./contact.html" class="navLink">Contact</a></li>
 	    	</ul>
 	  	</div>
 	</nav>
