--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About James Hafer</title>
+	<title>Contact James Hafer</title>
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
 	 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 
@@ -24,9 +24,9 @@
 	      		<a class="navbar-brand" href="./index.html">James Hafer</a>
 	    	</div>
 	    	<ul class="nav navbar-nav navbar-right">
-	      		<li><a href="./index.html">About Me</a></li>
-	      		<li><a href="./portfolio.html">Portfolio</a></li>
-	      		<li class="active"><a href="#">Contact</a></li>
+	      		<li class="liNav"><a href="./index.html" class="navLink">About Me</a></li>
+	      		<li class="liNav"><a href="./portfolio.html" class="navLink">Portfolio</a></li>
+	      		<li class="active liNav"><a href="#" class="navLink">Contact</a></li>
 	    	</ul>
 	  	</div>
 	</nav>
@@ -41,19 +41,19 @@
 		            <div class="form">
 						<form>
 							<div class="form-group">
-							  	<label>Name</label>
+							  	<label class="standardFont">Name</label>
 							  	<input class="form-control" type="text" placeholder="John Smith" autofocus="true" /><br/>
 						  	</div>
 						  	
 						  	<div class="form-group">
-							  	<label>Email</label>
+							  	<label class="standardFont">Email</label>
 							  	<input class="form-control" type="email" placeholder="john.smith@example.com"/><br/>
 							</div>
 							<div class="form-group">
-							    <label>Message</label>
+							    <label class="standardFont">Message</label>
 							    <textarea class="form-control" placeholder="This is the body of the email."></textarea>
 							</div>
-						  	<button class="btn btn-success" type="button">Submit</button>
+						  	<button class="btn btn-primary" type="button">Submit</button>
 						</form>
 					</div>
 				</div>
